--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/koa": "^3.0.1",
     "@types/node": "^24.10.2",
-    "@types/pg": "^8.15.6"
+    "@types/pg": "^8.15.6",
+    "tsx": "^4.21.0"
   }
 }
