--- a/backend/package.json
+++ b/backend/package.json
@@ -4,23 +4,24 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@koa/router": "^15.0.0",
     "koa": "^3.1.1",
     "kysely": "^0.28.8",
-    "kysely-codegen": "^0.19.0",
     "pg": "^8.16.3",
-    "serverless-http": "^4.0.0",
-    "typescript": "^5.9.3"
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "@types/koa": "^3.0.1",
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
-    "tsx": "^4.21.0"
+    "kysely-codegen": "^0.19.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
