--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,27 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx --watch index.ts"
   },
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "@koa/router": "^15.0.0",
+    "jose": "^6.1.3",
     "koa": "^3.1.1",
+    "koa-bodyparser": "^4.4.1",
+    "koa-logger": "^4.0.0",
     "kysely": "^0.28.8",
     "pg": "^8.16.3",
     "serverless-http": "^4.0.0",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/koa": "^3.0.1",
+    "@types/koa__cors": "^5.0.1",
+    "@types/koa-bodyparser": "^4.3.13",
+    "@types/koa-logger": "^3.1.5",
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
     "kysely-codegen": "^0.19.0",
