--- a/backend/package.json
+++ b/backend/package.json
@@ -14,19 +14,23 @@
     "@koa/cors": "^5.0.0",
     "@koa/router": "^15.0.0",
     "jose": "^6.1.3",
+    "jsdom": "^27.3.0",
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
+    "koa-json-error": "^3.1.2",
     "koa-logger": "^4.0.0",
     "kysely": "^0.28.8",
     "pg": "^8.16.3",
     "serverless-http": "^4.0.0",
-    "vitest": "^4.0.15",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/koa": "^3.0.1",
     "@types/koa__cors": "^5.0.1",
+    "@types/koa": "^3.0.1",
+    "vitest": "^4.0.15",
+    "@types/jsdom": "^27.0.0",
     "@types/koa-bodyparser": "^4.3.13",
+    "@types/koa-json-error": "^3.1.7",
     "@types/koa-logger": "^3.1.5",
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
