--- a/backend/package.json
+++ b/backend/package.json
@@ -15,27 +15,28 @@
     "@koa/router": "^15.0.0",
     "jose": "^6.1.3",
     "jsdom": "^27.3.0",
-    "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
     "koa-json-error": "^3.1.2",
     "koa-logger": "^4.0.0",
+    "koa": "^3.1.1",
     "kysely": "^0.28.8",
+    "linkedom": "^0.18.12",
     "pg": "^8.16.3",
     "serverless-http": "^4.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/koa__cors": "^5.0.1",
-    "@types/koa": "^3.0.1",
-    "vitest": "^4.0.15",
     "@types/jsdom": "^27.0.0",
+    "@types/koa__cors": "^5.0.1",
     "@types/koa-bodyparser": "^4.3.13",
     "@types/koa-json-error": "^3.1.7",
     "@types/koa-logger": "^3.1.5",
+    "@types/koa": "^3.0.1",
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
     "kysely-codegen": "^0.19.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   }
 }
