--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "@koa/router": "^15.0.0",
-    "jose": "^6.1.3",
     "jsdom": "^27.3.0",
+    "jsonwebtoken": "^9.0.3",
+    "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
     "koa-json-error": "^3.1.2",
     "koa-logger": "^4.0.0",
-    "koa": "^3.1.1",
     "kysely": "^0.28.8",
     "linkedom": "^0.18.12",
     "pg": "^8.16.3",
@@ -27,11 +27,12 @@
   },
   "devDependencies": {
     "@types/jsdom": "^27.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/koa": "^3.0.1",
     "@types/koa__cors": "^5.0.1",
     "@types/koa-bodyparser": "^4.3.13",
     "@types/koa-json-error": "^3.1.7",
     "@types/koa-logger": "^3.1.5",
-    "@types/koa": "^3.0.1",
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
     "kysely-codegen": "^0.19.0",
