--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
     "koa-json-error": "^3.1.2",
+    "koa-jwt": "^4.0.4",
     "koa-logger": "^4.0.0",
     "kysely": "^0.28.8",
     "linkedom": "^0.18.12",
@@ -33,6 +34,7 @@
     "@types/koa__cors": "^5.0.1",
     "@types/koa-bodyparser": "^4.3.13",
     "@types/koa-json-error": "^3.1.7",
+    "@types/koa-jwt": "^3.2.2",
     "@types/koa-logger": "^3.1.5",
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
