--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^24.10.2",
     "@types/pg": "^8.15.6",
     "kysely-codegen": "^0.19.0",
+    "node-flyway": "^0.0.13",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15"
