--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@testcontainers/postgresql": "^11.10.0",
     "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/koa": "^3.0.1",
@@ -41,6 +42,7 @@
     "@types/pg": "^8.15.6",
     "kysely-codegen": "^0.19.0",
     "node-flyway": "^0.0.13",
+    "testcontainers": "^11.10.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15"
