--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
+    "@mantine/charts": "^8.3.10",
     "@mantine/core": "^8.3.10",
     "@mantine/form": "^8.3.10",
     "@mantine/hooks": "^8.3.10",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
