--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -21,5 +21,11 @@ jobs:
           node-version: "24.11.1"
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Flyway
+        run: |
+          curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/10.8.1/flyway-commandline-10.8.1-linux-x64.tar.gz | tar xz
+          sudo ln -s $PWD/flyway-10.8.1/flyway /usr/local/bin/flyway
+
       - name: Run Vitest
         run: npx vitest
