--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,9 +23,7 @@ jobs:
         run: npm ci
 
       - name: Install Flyway
-        run: |
-          curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/10.8.1/flyway-commandline-10.8.1-linux-x64.tar.gz | tar xz
-          sudo ln -s $PWD/flyway-10.8.1/flyway /usr/local/bin/flyway
+        uses: ./.github/actions/install-flyway
 
       - name: Run Vitest
         run: npx vitest run --reporter=github-actions
